--- a/collection.html
+++ b/collection.html
@@ -147,8 +147,7 @@
 			<div class="footer_section_2">
 				<div class="row">
 					<div class="col-sm-4 col-lg-2">
-						<p class="dummy_text"> ipsum dolor sit amet, consectetur ipsum dolor sit amet, consectetur ipsum
-							dolor sit amet,</p>
+						<p class="dummy_text">Cửa hàng chuyên bán các loại giày sneaker giành cho giới trẻ.</p>
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
