--- a/contact.html
+++ b/contact.html
@@ -393,8 +393,7 @@
             <div class="footer_section_2">
                 <div class="row">
                     <div class="col-sm-4 col-lg-2">
-                        <p class="dummy_text"> ipsum dolor sit amet, consectetur ipsum dolor sit amet, consectetur ipsum
-                            dolor sit amet,</p>
+                        <p class="dummy_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam</p>
                     </div>
                     <div class="col-sm-4 col-lg-2">
                         <h2 class="shop_text">Địa chỉ</h2>
