--- a/shoes.html
+++ b/shoes.html
@@ -20,14 +20,14 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- fevicon -->
-    <link rel="icon" href="images/fevicon.png" type="image/gif" />
+<!--     <link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <!-- owl stylesheets -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+<!--     <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
         media="screen">
     <!--Canonical-->
@@ -242,8 +242,7 @@
             <div class="footer_section_2">
                 <div class="row">
                     <div class="col-sm-4 col-lg-2">
-                        <p class="dummy_text"> ipsum dolor sit amet, consectetur ipsum dolor sit amet, consectetur ipsum
-                            dolor sit amet,</p>
+                        <p class="dummy_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam</p>
                     </div>
                     <div class="col-sm-4 col-lg-2">
                         <h2 class="shop_text">Địa chỉ</h2>
