--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 	<!-- Responsive-->
 	<link rel="stylesheet" href="css/responsive.css">
 	<!-- fevicon -->
-	<link rel="icon" href="images/fevicon.png" type="image/gif" />
+<!-- 	<link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
 	<!-- Scrollbar Custom CSS -->
 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 	<!-- owl stylesheets -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+<!-- 	<link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
 		media="screen">
 	<!--[if lt IE 9]>
@@ -463,7 +463,7 @@
 			<div class="footer_section_2">
 				<div class="row">
 					<div class="col-sm-4 col-lg-2">
-						<p class="dummy_text"> Chọn giày chọn phong cách tại Vũ Trụ Sneaker</p>
+						<p class="dummy_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam</p>
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
@@ -520,7 +520,7 @@
 	<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 	<script src="js/custom.js"></script>
 	<!-- javascript -->
-	<script src="js/owl.carousel.js"></script>
+<!-- 	<script src="js/owl.carousel.js"></script> -->
 	<script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 	<script>
 		$(document).ready(function () {
