--- a/contact.html
+++ b/contact.html
@@ -148,8 +148,7 @@
             <div class="footer_section_2">
                 <div class="row">
                     <div class="col-sm-4 col-lg-2">
-                        <p class="dummy_text"> ipsum dolor sit amet, consectetur ipsum dolor sit amet, consectetur ipsum
-                            dolor sit amet,</p>
+                        <p class="dummy_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam</p>
                     </div>
                     <div class="col-sm-4 col-lg-2">
                         <h2 class="shop_text">Address </h2>
@@ -206,7 +205,7 @@
     <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/custom.js"></script>
     <!-- javascript -->
-    <script src="js/owl.carousel.js"></script>
+<!--     <script src="js/owl.carousel.js"></script> -->
     <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
     <script>
         $(document).ready(function () {
