--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!-- fevicon -->
 <!-- 	<link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
 	<!-- Scrollbar Custom CSS -->
-	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+<!-- 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css"> -->
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 	<!-- owl stylesheets -->
@@ -93,7 +93,7 @@
 											<div class="banner_taital">
 												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
-												<p class="lorem_text">Chọn giày chọn phong cách tại Vũ Trụ Sneaker
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
@@ -115,7 +115,7 @@
 											<div class="banner_taital">
 												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
-												<p class="lorem_text">Chọn giày chọn phong cách tại Vũ Trụ Sneaker
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
@@ -137,7 +137,7 @@
 											<div class="banner_taital">
 												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
-												<p class="lorem_text">Chọn giày chọn phong cách tại Vũ Trụ Sneaker
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
@@ -159,7 +159,7 @@
 											<div class="banner_taital">
 												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
-												<p class="lorem_text">Chọn giày chọn phong cách tại Vũ Trụ Sneaker
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
