--- a/contact.html
+++ b/contact.html
@@ -271,7 +271,7 @@
     <!-- Tweaks for older IEs-->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <!-- owl stylesheets -->
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
+<!--     <link rel="stylesheet" href="css/owl.carousel.min.css"> -->
 <!--     <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
         media="screen">
@@ -327,7 +327,8 @@
                     <div class="email_box">
                         <div class="input_main">
                             <div class="container">
-                                <form action="/action_page.php">
+                                <form action="">
+<!--                                     /action_page.php -->
                                     <div class="form-group">
                                         <input type="text" class="email-bt" placeholder="Họ và tên" name="Name">
                                     </div>
