--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-3">
-					<div class="logo"><a href="#"><img src="images/logo.png"></a></div>
+					<div class="logo"><a href="#"><img src="images/logo.png alt="Vu-Tru-Sneaker"></a></div>
 				</div>
 				<div class="col-sm-9">
 					<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -58,9 +58,9 @@
 								<a class="nav-item nav-link" href="shoes.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="blogs.html">Blogs</a>
 								<a class="nav-item nav-link" href="contact.html">Liên hệ</a>
-								<a class="nav-item nav-link last" href="#"><img src="images/search_icon.png"></a>
+								<a class="nav-item nav-link last" href="#"><img src="images/search_icon.png" alt="Cong-cu-tim-kiem"></a>
 								<a class="nav-item nav-link last" href="contact.html"><img
-										src="images/shop_icon.png"></a>
+										src="images/shop_icon.png" alt="shop"></a>
 							</div>
 						</div>
 					</nav>
