--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+                    <div class="logo"><a href="index.html"><img src="images/logo.png" alt="Vu-Tru-Sneaker"></a></div>
                 </div>
                 <div class="col-sm-9">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -60,9 +60,9 @@
                                 <a class="nav-item nav-link" href="shoes.html">Sản phẩm</a>
                                 <a class="nav-item nav-link" href="blogs.html">Blogs</a>
                                 <a class="nav-item nav-link" href="contact.html">Liên hệ</a>
-                                <a class="nav-item nav-link last" href="#"><img src="images/search_icon.png"></a>
+                                <a class="nav-item nav-link last" href="#"><img src="images/search_icon.png" alt="cong-cu-tim-kiem"></a>
                                 <a class="nav-item nav-link last" href="contact.html"><img
-                                        src="images/shop_icon.png"></a>
+                                        src="images/shop_icon.png" alt="shop"></a>
                             </div>
                         </div>
                     </nav>
