--- a/contact.html
+++ b/contact.html
@@ -289,7 +289,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="logo"><a href="#"><img src="images/logo.png"></a></div>
+                    <div class="logo"><a href="#"><img src="images/logo.png" alt="Vu-Tru-Sneaker"></a></div>
                 </div>
                 <div class="col-sm-9">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -305,9 +305,9 @@
                                 <a class="nav-item nav-link" href="shoes.html">Shoes</a>
                                 <a class="nav-item nav-link" href="blogs.html">Blogs</a>
                                 <a class="nav-item nav-link" href="contact.html">Contact</a>
-                                <a class="nav-item nav-link last" href="#"><img src="images/search_icon.png"></a>
+                                <a class="nav-item nav-link last" href="#"><img src="images/search_icon.png" alt="cong-cu-tim-kiem"></a>
                                 <a class="nav-item nav-link last" href="contact.html"><img
-                                        src="images/shop_icon.png"></a>
+                                        src="images/shop_icon.png" alt="shop"></a>
                             </div>
                         </div>
                     </nav>
