--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-3">
-					<div class="logo"><a href="#"><img src="images/logo.png alt="Vu-Tru-Sneaker"></a></div>
+					<div class="logo"><a href="#"><img src="images/logo.png" alt="Vu-Tru-Sneaker"></a></div>
 				</div>
 				<div class="col-sm-9">
 					<nav class="navbar navbar-expand-lg navbar-light bg-light">
