--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 											</div>
 										</div>
 										<div class="col-sm-5">
-											<div class="shoes_img"><img src="images/running-shoes.png"></div>
+											<div class="shoes_img"><img src="images/running-shoes.png" alt=""></div>
 										</div>
 									</div>
 								</div>
