--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 											</div>
 										</div>
 										<div class="col-sm-5">
-											<div class="shoes_img"><img src="images/running-shoes.png"></div>
+											<div class="shoes_img"><img src="images/running-shoes.png" alt=""></div>
 										</div>
 									</div>
 								</div>
@@ -144,7 +144,7 @@
 											</div>
 										</div>
 										<div class="col-sm-5">
-											<div class="shoes_img"><img src="images/running-shoes.png"></div>
+											<div class="shoes_img"><img src="images/running-shoes.png" alt=""></div>
 										</div>
 									</div>
 								</div>
@@ -166,7 +166,7 @@
 											</div>
 										</div>
 										<div class="col-sm-5">
-											<div class="shoes_img"><img src="images/running-shoes.png"></div>
+											<div class="shoes_img"><img src="images/running-shoes.png" alt=""></div>
 										</div>
 									</div>
 								</div>
@@ -188,16 +188,16 @@
 					<div class="col-md-6">
 						<div class="about-img">
 							<button class="new_bt">New</button>
-							<div class="shoes-img"><img src="images/shoes-img1.png"></div>
+							<div class="shoes-img"><img src="images/shoes-img1.png" alt=""></div>
 							<p class="sport_text">Giày thể thao nam</p>
 							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
 							<div class="star_icon">
 								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
 								</ul>
 							</div>
 						</div>
@@ -205,16 +205,16 @@
 					</div>
 					<div class="col-md-6">
 						<div class="about-img2">
-							<div class="shoes-img2"><img src="images/shoes-img2.png"></div>
+							<div class="shoes-img2"><img src="images/shoes-img2.png" alt=""></div>
 							<p class="sport_text">Giày thể thao nam</p>
 							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
 							<div class="star_icon">
 								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
 								</ul>
 							</div>
 						</div>
@@ -234,7 +234,7 @@
 			<div class="racing_shoes">
 				<div class="row">
 					<div class="col-md-8">
-						<div class="shoes-img3"><img src="images/shoes-img3.png"></div>
+						<div class="shoes-img3"><img src="images/shoes-img3.png" alt=""></div>
 					</div>
 					<div class="col-md-4">
 						<div class="sale_text"><strong>Giảm giá<br><span style="color: #0a0506;">Giày</span>
@@ -264,11 +264,11 @@
 						<div class="star_text">
 							<div class="left_part">
 								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
 								</ul>
 							</div>
 							<div class="right_part">
@@ -280,15 +280,15 @@
 				<div class="col-sm-4">
 					<div class="best_shoes">
 						<p class="best_text">Giày bán chạy nhất</p>
-						<div class="shoes_icon"><img src="images/shoes-img5.png"></div>
+						<div class="shoes_icon"><img src="images/shoes-img5.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
 								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
 								</ul>
 							</div>
 							<div class="right_part">
@@ -300,15 +300,15 @@
 				<div class="col-sm-4">
 					<div class="best_shoes">
 						<p class="best_text">Giày bán chạy nhất</p>
-						<div class="shoes_icon"><img src="images/shoes-img6.png"></div>
+						<div class="shoes_icon"><img src="images/shoes-img6.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
 								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
 								</ul>
 							</div>
 							<div class="right_part">
@@ -322,15 +322,15 @@
 				<div class="col-sm-4">
 					<div class="best_shoes">
 						<p class="best_text">Giày thể thao</p>
-						<div class="shoes_icon"><img src="images/shoes-img7.png"></div>
+						<div class="shoes_icon"><img src="images/shoes-img7.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
 								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
 								</ul>
 							</div>
 							<div class="right_part">
@@ -342,15 +342,15 @@
 				<div class="col-sm-4">
 					<div class="best_shoes">
 						<p class="best_text">Giày thể thao</p>
-						<div class="shoes_icon"><img src="images/shoes-img8.png"></div>
+						<div class="shoes_icon"><img src="images/shoes-img8.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
 								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
 								</ul>
 							</div>
 							<div class="right_part">
@@ -362,15 +362,15 @@
 				<div class="col-sm-4">
 					<div class="best_shoes">
 						<p class="best_text">Giày thể thao</p>
-						<div class="shoes_icon"><img src="images/shoes-img9.png"></div>
+						<div class="shoes_icon"><img src="images/shoes-img9.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
 								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
 								</ul>
 							</div>
 							<div class="right_part">
