--- a/shoes.html
+++ b/shoes.html
@@ -84,15 +84,15 @@
                 <div class="col-sm-4">
                     <div class="best_shoes">
                         <p class="best_text">Giày bán chạy nhất</p>
-                        <div class="shoes_icon"><img src="images/shoes-img4.png"></div>
+                        <div class="shoes_icon"><img src="images/shoes-img4.png" alt=""></div>
                         <div class="star_text">
                             <div class="left_part">
                                 <ul>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
                                 </ul>
                             </div>
                             <div class="right_part">
@@ -104,15 +104,15 @@
                 <div class="col-sm-4">
                     <div class="best_shoes">
                         <p class="best_text">Giày bán chạy nhất </p>
-                        <div class="shoes_icon"><img src="images/shoes-img5.png"></div>
+                        <div class="shoes_icon"><img src="images/shoes-img5.png" alt=""></div>
                         <div class="star_text">
                             <div class="left_part">
                                 <ul>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
                                 </ul>
                             </div>
                             <div class="right_part">
@@ -124,15 +124,15 @@
                 <div class="col-sm-4">
                     <div class="best_shoes">
                         <p class="best_text">Giày bán chạy nhất </p>
-                        <div class="shoes_icon"><img src="images/shoes-img6.png"></div>
+                        <div class="shoes_icon"><img src="images/shoes-img6.png" alt=""></div>
                         <div class="star_text">
                             <div class="left_part">
                                 <ul>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
                                 </ul>
                             </div>
                             <div class="right_part">
@@ -146,15 +146,15 @@
                 <div class="col-sm-4">
                     <div class="best_shoes">
                         <p class="best_text">Giày thể thao</p>
-                        <div class="shoes_icon"><img src="images/shoes-img7.png"></div>
+                        <div class="shoes_icon"><img src="images/shoes-img7.png" alt=""></div>
                         <div class="star_text">
                             <div class="left_part">
                                 <ul>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
                                 </ul>
                             </div>
                             <div class="right_part">
@@ -166,15 +166,15 @@
                 <div class="col-sm-4">
                     <div class="best_shoes">
                         <p class="best_text">Giày thể thao</p>
-                        <div class="shoes_icon"><img src="images/shoes-img8.png"></div>
+                        <div class="shoes_icon"><img src="images/shoes-img8.png" alt=""></div>
                         <div class="star_text">
                             <div class="left_part">
                                 <ul>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
                                 </ul>
                             </div>
                             <div class="right_part">
@@ -186,15 +186,15 @@
                 <div class="col-sm-4">
                     <div class="best_shoes">
                         <p class="best_text">Giày thể thao</p>
-                        <div class="shoes_icon"><img src="images/shoes-img9.png"></div>
+                        <div class="shoes_icon"><img src="images/shoes-img9.png" alt=""></div>
                         <div class="star_text">
                             <div class="left_part">
                                 <ul>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
-                                    <li><a href="#"><img src="images/star-icon.png"></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
                                 </ul>
                             </div>
                             <div class="right_part">
@@ -216,23 +216,23 @@
             <div class="mail_section">
                 <div class="row">
                     <div class="col-sm-6 col-lg-2">
-                        <div><a href="#"><img src="images/footer-logo.png"></a></div>
+                        <div><a href="#"><img src="images/footer-logo.png" alt=""></a></div>
                     </div>
                     <div class="col-sm-6 col-lg-2">
-                        <div class="footer-logo"><img src="images/phone-icon.png"><span class="map_text">(71)
+                        <div class="footer-logo"><img src="images/phone-icon.png" alt=""><span class="map_text">(71)
                                 1234567890</span></div>
                     </div>
                     <div class="col-sm-6 col-lg-3">
-                        <div class="footer-logo"><img src="images/email-icon.png"><span
+                        <div class="footer-logo"><img src="images/email-icon.png" alt=""><span
                                 class="map_text">Demo@gmail.com</span></div>
                     </div>
                     <div class="col-sm-6 col-lg-3">
                         <div class="social_icon">
                             <ul>
-                                <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                                <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                                <li><a href="#"><img src="images/in-icon.png"></a></li>
-                                <li><a href="#"><img src="images/google-icon.png"></a></li>
+                                <li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
+                                <li><a href="#"><img src="images/twitter-icon.png" alt=""></a></li>
+                                <li><a href="#"><img src="images/in-icon.png" alt=""></a></li>
+                                <li><a href="#"><img src="images/google-icon.png" alt=""></a></li>
                             </ul>
                         </div>
                     </div>
