--- a/collection.html
+++ b/collection.html
@@ -79,16 +79,16 @@
 					<div class="col-md-6">
 						<div class="about-img">
 							<button class="new_bt">Mới</button>
-							<div class="shoes-img"><img src="images/shoes-img1.png"></div>
+							<div class="shoes-img"><img src="images/shoes-img1.png" alt=""></div>
 							<p class="sport_text">Giày thể thao nam</p>
 							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
 							<div class="star_icon">
 								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
 								</ul>
 							</div>
 						</div>
@@ -96,16 +96,16 @@
 					</div>
 					<div class="col-md-6">
 						<div class="about-img2">
-							<div class="shoes-img2"><img src="images/shoes-img2.png"></div>
+							<div class="shoes-img2"><img src="images/shoes-img2.png" alt=""></div>
 							<p class="sport_text">Giày thể thao nam</p>
 							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
 							<div class="star_icon">
 								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
+									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
 								</ul>
 							</div>
 						</div>
@@ -121,23 +121,23 @@
 			<div class="mail_section">
 				<div class="row">
 					<div class="col-sm-6 col-lg-2">
-						<div><a href="#"><img src="images/footer-logo.png"></a></div>
+						<div><a href="#"><img src="images/footer-logo.png" alt=""></a></div>
 					</div>
 					<div class="col-sm-6 col-lg-2">
-						<div class="footer-logo"><img src="images/phone-icon.png"><span class="map_text">(71)
+						<div class="footer-logo"><img src="images/phone-icon.png" alt=""><span class="map_text">(71)
 								1234567890</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
-						<div class="footer-logo"><img src="images/email-icon.png"><span
+						<div class="footer-logo"><img src="images/email-icon.png" alt=""><span
 								class="map_text">Demo@gmail.com</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
 						<div class="social_icon">
 							<ul>
-								<li><a href="#"><img src="images/fb-icon.png"></a></li>
-								<li><a href="#"><img src="images/twitter-icon.png"></a></li>
-								<li><a href="#"><img src="images/in-icon.png"></a></li>
-								<li><a href="#"><img src="images/google-icon.png"></a></li>
+								<li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="images/twitter-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="images/in-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="images/google-icon.png" alt=""></a></li>
 							</ul>
 						</div>
 					</div>
@@ -151,7 +151,7 @@
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
-						<div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">Đường Hàn Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
+						<div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
 						<h2 class="shop_text">Công ty của chúng tôi </h2>
