--- a/blogs.html
+++ b/blogs.html
@@ -83,7 +83,7 @@
 				<div class="racing_shoes">
 					<div class="row">
 						<div class="col-md-8">
-							<div class="shoes-img3"><img src="images/shoes-img3.png"></div>
+							<div class="shoes-img3"><img src="images/shoes-img3.png" alt=""></div>
 						</div>
 						<div class="col-md-4">
 							<div class="sale_text"><strong>Blog <br><span style="color: #0a0506;">Cách vệ sinh giày</span>
@@ -103,23 +103,23 @@
 			<div class="mail_section">
 				<div class="row">
 					<div class="col-sm-6 col-lg-2">
-						<div><a href="#"><img src="images/footer-logo.png"></a></div>
+						<div><a href="#"><img src="images/footer-logo.png" alt=""></a></div>
 					</div>
 					<div class="col-sm-6 col-lg-2">
-						<div class="footer-logo"><img src="images/phone-icon.png"><span class="map_text">(71)
+						<div class="footer-logo"><img src="images/phone-icon.png" alt=""><span class="map_text">(71)
 								1234567890</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
-						<div class="footer-logo"><img src="images/email-icon.png"><span
+						<div class="footer-logo"><img src="images/email-icon.png" alt=""><span
 								class="map_text">Demo@gmail.com</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
 						<div class="social_icon">
 							<ul>
-								<li><a href="#"><img src="images/fb-icon.png"></a></li>
-								<li><a href="#"><img src="images/twitter-icon.png"></a></li>
-								<li><a href="#"><img src="images/in-icon.png"></a></li>
-								<li><a href="#"><img src="images/google-icon.png"></a></li>
+								<li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="images/twitter-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="images/in-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="images/google-icon.png" alt=""></a></li>
 							</ul>
 						</div>
 					</div>
@@ -133,7 +133,7 @@
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
-						<div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">Đường Hàn Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
+						<div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
 						<h2 class="shop_text">Công ty của chúng tôi</h2>
