--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 				<div class="col-sm-4">
 					<div class="best_shoes">
 						<p class="best_text">Giày bán chạy nhất</p>
-						<div class="shoes_icon"><img src="images/shoes-img4.png"></div>
+						<div class="shoes_icon"><img src="images/shoes-img4.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
 								<ul>
@@ -397,8 +397,8 @@
 					<div class="email_box">
 						<div class="input_main">
 							<div class="container">
-								<form action="">
-<!-- 									/action_page.php -->
+								<form >
+<!-- 									/action="action_page.php" -->
 									<div class="form-group">
 										<input type="text" class="email-bt" placeholder="Họ và tên" name="Name">
 									</div>
@@ -438,23 +438,23 @@
 			<div class="mail_section">
 				<div class="row">
 					<div class="col-sm-6 col-lg-2">
-						<div><a href="#"><img src="images/footer-logo.png"></a></div>
+						<div><a href="#"><img src="images/footer-logo.png" alt=""></a></div>
 					</div>
 					<div class="col-sm-6 col-lg-2">
-						<div class="footer-logo"><img src="images/phone-icon.png"><span class="map_text">(71)
+						<div class="footer-logo"><img src="images/phone-icon.png" alt=""><span class="map_text">(71)
 								1234567890</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
-						<div class="footer-logo"><img src="images/email-icon.png"><span
+						<div class="footer-logo"><img src="images/email-icon.png" alt=""><span
 								class="map_text">Demo@gmail.com</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
 						<div class="social_icon">
 							<ul>
-								<li><a href="#"><img src="images/fb-icon.png"></a></li>
-								<li><a href="#"><img src="images/twitter-icon.png"></a></li>
-								<li><a href="#"><img src="images/in-icon.png"></a></li>
-								<li><a href="#"><img src="images/google-icon.png"></a></li>
+								<li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="images/twitter-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="images/in-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="images/google-icon.png" alt=""></a></li>
 							</ul>
 						</div>
 					</div>
@@ -468,7 +468,7 @@
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
-						<div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">Đường Hàn Thuyên,
+						<div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn Thuyên,
 								khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
@@ -506,7 +506,7 @@
 			</div>
 		</div>
 	</div>
-	</div>
+<!-- 	</div> -->
 	<!-- section footer end -->
 	<div class="copyright">Group 2</div>
 
