--- a/collection.html
+++ b/collection.html
@@ -188,7 +188,7 @@
 			</div>
 		</div>
 	</div>
-	</div>
+<!-- 	</div> -->
 	<!-- section footer end -->
 	<div class="copyright">Group 2</div>
 
@@ -204,7 +204,8 @@
 	<script src="js/custom.js"></script>
 	<!-- javascript -->
 <!-- 	<script src="js/owl.carousel.js"></script> -->
-	<script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+<!-- 	https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js -->
 	<script>
 		$(document).ready(function () {
 			$(".fancybox").fancybox({
