--- a/shoes.html
+++ b/shoes.html
@@ -246,7 +246,7 @@
                     </div>
                     <div class="col-sm-4 col-lg-2">
                         <h2 class="shop_text">Địa chỉ</h2>
-                        <div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">Đường Hàn Thuyên,
+                        <div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn Thuyên,
                                 khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
                     </div>
                     <div class="col-sm-4 col-md-6 col-lg-3">
@@ -284,7 +284,7 @@
             </div>
         </div>
     </div>
-    </div>
+<!--     </div> -->
     <!-- section footer end -->
     <div class="copyright">Group 2</div>
 
@@ -300,7 +300,7 @@
     <script src="js/custom.js"></script>
     <!-- javascript -->
 <!--     <script src="js/owl.carousel.js"></script> -->
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
     <script>
         $(document).ready(function () {
             $(".fancybox").fancybox({
