--- a/contact.html
+++ b/contact.html
@@ -82,8 +82,8 @@
                     <div class="email_box">
                         <div class="input_main">
                             <div class="container">
-                                <form action="">
-<!--                                     /action_page.php -->
+                                <form >
+<!--                                     /action="action_page.php" -->
                                     <div class="form-group">
                                         <input type="text" class="email-bt" placeholder="Họ và tên" name="Name">
                                     </div>
@@ -191,7 +191,7 @@
             </div>
         </div>
     </div>
-    </div>
+<!--     </div> -->
     <!-- section footer end -->
     <div class="copyright">Group 2</div>
 
@@ -207,7 +207,7 @@
     <script src="js/custom.js"></script>
     <!-- javascript -->
 <!--     <script src="js/owl.carousel.js"></script> -->
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
     <script>
         $(document).ready(function () {
             $(".fancybox").fancybox({
@@ -242,7 +242,7 @@
     </script>
 </body>
 
-</html>
+<!-- </html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -488,3 +488,4 @@
 </body>
 
 </html>
+ -->
