--- a/blogs.html
+++ b/blogs.html
@@ -170,7 +170,7 @@
 			</div>
 		</div>
 	</div>
-	</div>
+<!-- 	</div> -->
 	<!-- section footer end -->
 	<div class="copyright">Group 2</div>
 
@@ -186,7 +186,7 @@
 	<script src="js/custom.js"></script>
 	<!-- javascript -->
 <!-- 	<script src="js/owl.carousel.js"></script> -->
-	<script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 	<script>
 		$(document).ready(function () {
 			$(".fancybox").fancybox({
