--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 	</div>
 	<!-- header section end -->
 	<!-- new collection section start -->
+	<h1></h1>
 	<div class="layout_padding collection_section">
 		<div class="container">
 			<h1 class="new_text"><strong>Sản phẩm mới</strong></h1>
@@ -522,7 +523,7 @@
 	<script src="js/custom.js"></script>
 	<!-- javascript -->
 <!-- 	<script src="js/owl.carousel.js"></script> -->
-	<script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 	<script>
 		$(document).ready(function () {
 			$(".fancybox").fancybox({
