--- a/blogs.html
+++ b/blogs.html
@@ -20,14 +20,14 @@
 	<!-- Responsive-->
 	<link rel="stylesheet" href="css/responsive.css">
 	<!-- fevicon -->
-<!-- 	<link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
+	<!-- 	<link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
 	<!-- Scrollbar Custom CSS -->
-<!-- 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css"> -->
+	<!-- 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css"> -->
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 	<!-- owl stylesheets -->
-<!-- 	<link rel="stylesheet" href="css/owl.carousel.min.css"> -->
-<!-- 	<link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
+	<!-- 	<link rel="stylesheet" href="css/owl.carousel.min.css"> -->
+	<!-- 	<link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
 		media="screen">
 	<!--[if lt IE 9]>
@@ -58,9 +58,10 @@
 								<a class="nav-item nav-link" href="shoes.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="blogs.html">Blogs</a>
 								<a class="nav-item nav-link" href="contact.html">Liên hệ</a>
-								<a class="nav-item nav-link last" href="#"><img src="images/search_icon.png" alt="cong-cu-tim-kiem"></a>
-								<a class="nav-item nav-link last" href="contact.html"><img
-										src="images/shop_icon.png" alt="shop"></a>
+								<a class="nav-item nav-link last" href="#"><img src="images/search_icon.png"
+										alt="cong-cu-tim-kiem"></a>
+								<a class="nav-item nav-link last" href="contact.html"><img src="images/shop_icon.png"
+										alt="shop"></a>
 							</div>
 						</div>
 					</nav>
@@ -73,9 +74,40 @@
 	<div class="about_main layout_padding">
 		<div class="collection_section">
 			<div class="container">
-				<h1 class="new_text"><strong>Các Blog Giày</strong></h1>
-				<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-					dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+				<h1 class="new_text"><strong>Top 3 đôi giày nữ có thể phối mọi outfit</strong></h1>
+				<p class="consectetur_text">Giày nữ không chỉ đơn giản là một món đồ dùng để bảo vệ đôi chân. Đây còn
+					được xem như một món trang sức không thể thiếu trong tủ đồ của mỗi cô nàng. Và TrendyLady sẽ gợi ý
+					cho nàng top 3 đôi giày nữ đỉnh nhất mà nàng nên đầu tư.</p>
+			</div>
+		</div>
+		<div class="collectipn_section_3 layout_padding">
+			<div class="container">
+				<div class="racing_shoes">
+					<div class="row">
+						<div class="col-md-8">
+							<div class="shoes-img3"><img src="images/giay-sneaker-nu.jpg" alt=""></div>
+						</div>
+						<div class="col-md-4">
+							<div class="sale_text"><strong>Top 3 <br><span style="color: #0a0506;">đôi giày
+										nữ</span>
+									<br></strong></div>
+							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
+							<button class="seemore"> <a href="">XEM THÊM</a></button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- PAUSE -->
+	<div class="about_main layout_padding">
+		<div class="collection_section">
+			<div class="container">
+				<h1 class="new_text"><strong>Outlet là gì - Kinh nghiệm mua hàng outlet ở Nhật </strong></h1>
+				<p class="consectetur_text">Ở Nhật Bản nói riêng và toàn thế giới nói chung, đối với các tín đồ ham mê
+					mua sắm cũng như yêu thích các thương hiệu nổi tiếng, nhưng lại không dư giả về mặt tài chính, chắc
+					chắn sẽ biết tới Outlet. Outlet là trung tâm mua sắm, nơi tập hợp hàng ngàn các thương hiệu nổi
+					tiếng, nhưng lại hoàn toàn có thể mua với giá phải chăng.</p>
 			</div>
 		</div>
 		<div class="collectipn_section_3 layout_padding">
@@ -86,10 +118,10 @@
 							<div class="shoes-img3"><img src="images/shoes-img3.png" alt=""></div>
 						</div>
 						<div class="col-md-4">
-							<div class="sale_text"><strong>Blog <br><span style="color: #0a0506;">Cách vệ sinh giày</span>
+							<div class="sale_text"><strong>Sneaker <br><span style="color: #0a0506;">Outlet</span>
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
-							<button class="seemore">XEM THÊM</button>
+							<button class="seemore"> <a href="">XEM THÊM</a></button>
 						</div>
 					</div>
 				</div>
@@ -133,7 +165,8 @@
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
-						<div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
+						<div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn
+								Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
 						<h2 class="shop_text">Công ty của chúng tôi</h2>
@@ -170,7 +203,7 @@
 			</div>
 		</div>
 	</div>
-<!-- 	</div> -->
+	<!-- 	</div> -->
 	<!-- section footer end -->
 	<div class="copyright">Group 2</div>
 
@@ -185,7 +218,7 @@
 	<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 	<script src="js/custom.js"></script>
 	<!-- javascript -->
-<!-- 	<script src="js/owl.carousel.js"></script> -->
+	<!-- 	<script src="js/owl.carousel.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 	<script>
 		$(document).ready(function () {
