--- a/blogs.html
+++ b/blogs.html
@@ -92,7 +92,7 @@
 										nữ</span>
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
-							<button class="seemore"> <a href="">XEM THÊM</a></button>
+							<button class="seemore"> <a href="blogs/blogOuletGiay-1-top-3-giay-phoi-moi-out-fit.html">XEM THÊM</a></button>
 						</div>
 					</div>
 				</div>
@@ -121,7 +121,7 @@
 							<div class="sale_text"><strong>Sneaker <br><span style="color: #0a0506;">Outlet</span>
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
-							<button class="seemore"> <a href="">XEM THÊM</a></button>
+							<button class="seemore"> <a href="blogs/blogOutletGiay-2.html">XEM THÊM</a></button>
 						</div>
 					</div>
 				</div>
