--- a/blogs/blogOutletGiay-2.html
+++ b/blogs/blogOutletGiay-2.html
@@ -67,7 +67,147 @@
 				</div>
 			</div>
 		</div>
-	</div>   <div class="section_footer">
+	</div>
+	<div class="site-content">
+
+
+
+
+		<main id="site-main" class="site-main">
+			<article class="article post tag-nghe-thuat image-small">
+
+				<header class="article-header gh-canvas">
+
+					<h1 class="article-title">Outlet là gì - Kinh nghiệm mua hàng outlet ở Nhật</h1>
+
+
+
+
+					<figure class="article-image">
+						<img src="/images/sneaker-blog2.jpg" alt="Outlet là gì - Kinh nghiệm mua hàng outlet ở Nhật">
+					</figure>
+				</header>
+
+				<section class="gh-content gh-canvas">
+					<p><strong>Outlet là gì - Kinh nghiệm mua hàng outlet ở Nhật</strong></p>
+					<p>Ở Nhật Bản nói riêng và toàn thế giới nói chung, đối với các tín đồ ham mê mua sắm cũng như yêu
+						thích các thương hiệu nổi tiếng, nhưng lại không dư giả về mặt tài chính, chắc chắn sẽ biết tới
+						Outlet. Outlet là trung tâm mua sắm, nơi tập hợp hàng ngàn các thương hiệu nổi tiếng, nhưng lại
+						hoàn toàn có thể mua với giá phải chăng.Một số nhãn hiệu nổi tiếng mà bạn có thể mua tại Outlet
+						như: Balenciaga, Nike, Adidas, Gucci, Chanel,...Tại sao, một món hàng đắt giá lại bị mang ra bán
+						rẻ bèo như vậy. Đó là do những lý do sau :<br></p>
+					<ul>
+						<li>Sản phẩm bị trả lại do đã hết hợp đồng giao bán<br></li>
+						<li>Hàng từng được dùng làm đồ trưng bày<br></li>
+						<li>Hàng mua online bị khách trả lại do không hợp<br></li>
+						<li>Hàng bị rách hộp, mất túi bảo quản<br></li>
+						<li>Hàng trái mùa, hết mùa ( Ví dụ như mùa đông đến, hàng mùa hè không bán được nữa sẽ tập hợp
+							về đây )<br></li>
+						<li>Hàng lỗi mốt, bạc màu, có vết xước, lỗi đường chỉ may..<br></li>
+					</ul>
+					<p>Các trung tâm Outlet có cửa hàng trên toàn quốc, nhưng lại nằm khá xa với trung tâm các thành phố
+						lớn và ga tàu điện. Tuy nhiên, bạn có thể tới đây bằng xe bus từ ga tàu điện. Vì vậy, việc đến
+						đây mua sắm hoàn toàn dễ dàng, cho dù bạn không có ô tô riêng đi chăng nữa.</p>
+					<p>Vì vậy, hàng outlet nói chung và <strong>giày outlet </strong>nói riêng có sức hút rất lớn đối
+						với các bạn sinh viên, những người tiêu dùng không chạy theo xu hướng đang tìm kiếm một sản phẩm
+						vừa chất lượng đến từ các nhãn hàng uy tín như Nike, Adidas,.. với giá cả phải chăng,..</p>
+					<p><strong>Một số nơi mua giày outlet ở Nhật Bản</strong></p>
+					<p>Nhật Bản là nơi có nền văn hóa mua sắm đồ outlet nói chung và giày outlet nói riêng thì không còn
+						xa lạ. Trong thời gian trải nghiệm ở Nhật Bản chúng tôi có tổng hợp một số nơi mua hàng outlet
+					</p>
+					<p>1. Aeon Lake Town Outlet, Saitama</p>
+					<p>https://youtu.be/ORyWr2h4Ask</p>
+					<p>LakeTown OUTLET là một loại hình cửa hàng mới mang lại cảm giác thoải mái và thú vị, mang đến
+						niềm vui khi có được một thương hiệu mà bạn ngưỡng mộ và niềm vui khi cùng tồn tại với thiên
+						nhiên.<br></p>
+					<p>Tên tiếng Nhật: イオンレイクタウンアウトレット<br></p>
+					<p>Địa điểm: 埼玉県越谷市レイクタウン４丁目1-1<br></p>
+					<p>Thời gian làm việc: 10:00 ~ 20:00<br></p>
+					<p>Website: http://laketown-outlet.jp/<br></p>
+					<p>2. Mitsui Outlet Park Yokohama Bayside, Kanagawa</p>
+					<p>Nơi bạn có thể thỏa sức mua sắm trong khu nghỉ dưỡng kết hợp shopping với 84 cửa hàng.<br></p>
+					<p>Tên tiếng Nhật: 三井アウトレットパーク横浜ベイサイド<br></p>
+					<p>Địa điểm: 神奈川県横浜市金沢区白帆５−2<br></p>
+					<p>Thời gian làm việc: 10:00 ~ 20:00<br></p>
+					<p>Website: https://mitsui-shopping-park.com/mop/yokohama/<br></p>
+					<figure class="kg-card kg-image-card"><img
+							src="https://blog.jpculture.asia/content/images/2023/03/1-1.png" class="kg-image" alt=""
+							loading="lazy" width="1128" height="744"
+							srcset="https://blog.jpculture.asia/content/images/size/w600/2023/03/1-1.png 600w, https://blog.jpculture.asia/content/images/size/w1000/2023/03/1-1.png 1000w, https://blog.jpculture.asia/content/images/2023/03/1-1.png 1128w"
+							sizes="(min-width: 720px) 720px"></figure>
+					<p>3. Kishiwada Cancan Bayside Mall, Osaka</p>
+					<p>Vịnh Osaka đang ở ngay trước trung tâm outlet này. Bạn có thể thỏa sức mua sắm, đồ ăn ngon và
+						những buổi hẹn hò lãng mạn ở khu vực Vịnh, điểm du lịch mới của Kishiwada.<br></p>
+					<p>Tên tiếng Nhật: 岸和田カンカンベイサイドモール<br></p>
+					<p>Địa điểm: 大阪府岸和田市港緑町３−1<br></p>
+					<p>Thời gian làm việc: 10:00 ~ 20:00<br></p>
+					<p>Website: http://k-cancan.jp/<br></p>
+					<p>4. Adidas Factory Outlet shop Karuizawa, Nagano</p>
+					<p>Đây là cửa hàng thứ sáu ở Nhật Bản, nhưng điều gây choáng ngợp là quy mô của nó. Tất cả các danh
+						mục của adidas đều có sẵn, chỉ tính riêng giày đã có hơn 8000 mặt hàng, thật tuyệt vời. Nó được
+						khuyến khích vì bạn có thể phối hợp tất cả các trang phục được sử dụng trong phòng tập thể dục
+						thể thao. Quần áo tennis cũng có sẵn từ mùa xuân đến mùa thu.<br></p>
+					<p>Tên tiếng Nhật: アディダスファクトリーアウトレット軽井沢店<br></p>
+					<p>Địa điểm: 長野県北佐久郡軽井沢町軽井沢1080-4 軽井沢・プリンスショッピングプラザイースト<br></p>
+					<p>Thời gian làm việc: 10:00 ~ 19:00<br></p>
+					<p>Website: http://shop.adidas.jp/<br></p>
+					<p>5. Cools Mall, Ehime</p>
+					<figure class="kg-card kg-image-card"><img
+							src="https://blog.jpculture.asia/content/images/2023/03/2.png" class="kg-image" alt=""
+							loading="lazy" width="1124" height="848"
+							srcset="https://blog.jpculture.asia/content/images/size/w600/2023/03/2.png 600w, https://blog.jpculture.asia/content/images/size/w1000/2023/03/2.png 1000w, https://blog.jpculture.asia/content/images/2023/03/2.png 1124w"
+							sizes="(min-width: 720px) 720px"></figure>
+					<p>Một trung tâm mua sắm trong một cơ sở giải trí toàn diện được trang bị suối nước nóng tự nhiên,
+						cơ sở lưu trú và sân gôn thư giãn. Với 35 cửa hàng được xếp hàng dài, tất cả các mặt hàng như
+						thời trang nhập khẩu, quần jean, mỹ phẩm, và các mặt hàng linh tinh đều có mức GIẢM GIÁ bất ngờ.
+						Thương hiệu cửa hàng đầu tiên của Shikoku và cửa hàng đầu tiên của đại lý.</p>
+					<p>Tên tiếng Nhật: クールス・モール</p>
+					<p>Địa điểm: 愛媛県東温市見奈良1125</p>
+					<p>Thời gian làm việc: 10:00 ~ 20:00</p>
+					<p>Website: <a href="http://www.lesp.co.jp/cools/">http://www.lesp.co.jp/cools/</a></p>
+					<p>Vậy mua giày outlet ở đâu khi về Việt Nam?</p>
+					<p><strong>Nơi mua giày outlet ở Việt Nam chính hãng</strong><br></p>
+					<p>Ở Việt Nam, khái niệm và xu hướng mua đồ outlet đặc biệt là <strong>giày outlet </strong>chỉ vừa
+						xuất hiện và phát triển những năm gần đây. Quả thật rất khó để tìm một nơi uy tín để mua. Tuy
+						nhiên, có một nơi đã nhận được lượng phản hồi rất tốt và chúng tôi đã có thời gian kiểm chứng
+						tại <a href="https://www.vutrusneaker.shop/">Vũ trụ Sneaker - chuyên giày outlet</a> nơi đây rất
+						xứng đáng để trải nghiệm và tin mua trong một thời gian dài với các lí do sau đây:</p>
+					<ul>
+						<li><a href="https://www.vutrusneaker.shop/">Vũ trụ Sneaker</a> là cửa hàng giày reseller của
+							các hãng thời trang chính hãng như Nike, Adidas,.. Mang trong mình trọng trách mang đến cho
+							các bạn những sản phẩm giày, đặc biệt là giày outlet chất lượng, chính hãng, giá rẽ nhất
+							trên thị trường.</li>
+						<li>Chế độ hậu mãi sau khi mua hàng của <a href="https://www.vutrusneaker.shop/">Vũ trụ
+								Sneaker</a> là thứ hai không ai xưng chủ nhật!! Với bảo hành trọn đời keo chỉ lên đến 2
+							năm, đổi trả trong vòng 30 ngày nếu sản phẩm lỗi và với 7 ngày nếu không hài lòng về sản
+							phẩm cùng hàng ngàn chế độ hậu mãi khác.</li>
+						<li>Bên cạnh đó, <a href="https://www.vutrusneaker.shop/">Vũ trụ Sneaker</a> luôn lắng nghe và
+							hỗ trợ khách hàng 24/7, cùng hàng ngàn quà tặng đối với các hạng thành viên. Nhiều ưu đãi
+							mỗi dịp sinh nhật của khác hàng cùng với các dịp lễ lớn.</li>
+					</ul>
+					<p>Chúng tôi tin với các lí do trên, các bạn đã có thêm những kiến thức về văn hóa mua giày outlet ở
+						nhật bản, các store uy tín ở nhật bản và các store uy tín ở Việt Nam như <a
+							href="https://www.vutrusneaker.shop/">Vũ trụ Sneaker</a> và đưa ra lựa chọn hợp lí.<br></p>
+					<p>Các từ khóa bạn có thể muốn tìm: mua giày outlet ở đâu, giày outlet chính hãng uy tín ở Việt Nam,
+						<a href="https://www.vutrusneaker.shop/">Vũ trụ Sneaker chuyên giày outlet</a>, văn hóa mua giày
+						outlet nhật bản,..
+					</p>
+					<p><br>nguồn: <a
+							href="https://blog.jpculture.asia/outlet-la-gi-kinh-nghiem-mua-hang-outlet-o-nhat/">https://blog.jpculture.asia/outlet-la-gi-kinh-nghiem-mua-hang-outlet-o-nhat/</a>
+					</p>
+				</section>
+
+
+			</article>
+		</main>
+
+
+
+
+
+
+	</div>
+	<div class="section_footer">
 		<div class="container">
 			<div class="mail_section">
 				<div class="row">
@@ -103,7 +243,8 @@
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Address </h2>
-						<div class="image-icon"><img src="../images/map-icon.png"><span class="pet_text">No 40 Baria Sreet
+						<div class="image-icon"><img src="../images/map-icon.png"><span class="pet_text">No 40 Baria
+								Sreet
 								15/2 NewYork City, NY, United States.</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
@@ -142,6 +283,7 @@
 		</div>
 	</div>
 	</div>
+
 	<!-- section footer end -->
 	<div class="copyright">Group 2</div>
 
